PAYB-888 - Added new method to repo

--- a/.github/workflows/branch-commit-check.yml
+++ b/.github/workflows/branch-commit-check.yml
@@ -44,17 +44,14 @@ jobs:
           git fetch origin
 
           # Get commit messages for the current branch and exclude merges
-          COMMITS=$(git log origin/$(git rev-parse --abbrev-ref HEAD)..HEAD --pretty=format:"%H %s" --no-merges)
+          COMMITS=$(git log origin/$(git rev-parse --abbrev-ref HEAD)..HEAD --pretty=format:"%s" --no-merges)
 
           PATTERN="^PAYB-[0-9]+ - .+$"
           # Loop through commits
-          while IFS= read -r COMMIT; do
-            COMMIT_HASH=$(echo "$COMMIT" | cut -d' ' -f1)
-            COMMIT_MSG=$(echo "$COMMIT" | cut -d' ' -f2-)
-
+          while IFS= read -r COMMIT_MSG; do
             # Skip empty commit messages
             if [[ -z "$COMMIT_MSG" ]]; then
-              echo "⚠️ Empty commit message found in commit: $COMMIT_HASH"
+              echo "⚠️ Empty commit message found."
               continue
             fi
 
