--- a/.github/workflows/branch-commit-check.yml
+++ b/.github/workflows/branch-commit-check.yml
@@ -25,6 +25,12 @@ jobs:
             BRANCH_NAME="${GITHUB_HEAD_REF}"
           fi
 
+          # Allow branches starting with deployment/
+          if [[ $BRANCH_NAME == deployment/* ]]; then
+            echo "✅ Branch name is correctly formatted (deployment): $BRANCH_NAME"
+            exit 0
+          fi
+
           PATTERN="^(feature|bugfix|merge)\/PAYB-[0-9]+(-(dev|uat|stage|master))?$"
           if [[ ! $BRANCH_NAME =~ $PATTERN ]]; then
             echo "❌ Invalid branch name: $BRANCH_NAME"
@@ -32,6 +38,7 @@ jobs:
             echo "  - feature/PAYB-1234"
             echo "  - bugfix/PAYB-1234"
             echo "  - merge/PAYB-1234-dev, merge/PAYB-1234-uat, merge/PAYB-1234-stage, merge/PAYB-1234-master"
+            echo "  - deployment/<any-name>"
             exit 1
           else
             echo "✅ Branch name is correctly formatted: $BRANCH_NAME"
