--- a/.github/workflows/branch-commit-check.yml
+++ b/.github/workflows/branch-commit-check.yml
@@ -25,7 +25,7 @@ jobs:
             BRANCH_NAME="${GITHUB_HEAD_REF}"
           fi
 
-          # Updated pattern to handle deployment/ branches differently
+          # Allow deployment/ branches without PAYB- requirement
           if [[ $BRANCH_NAME == deployment/* ]]; then
             echo "✅ Branch name is correctly formatted (deployment): $BRANCH_NAME"
           else
@@ -45,6 +45,17 @@ jobs:
 
       - name: Check Commit Messages
         run: |
+          # Skip commit message check for deployment/ branches
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          if [[ $GITHUB_REF == refs/pull/* ]]; then
+            BRANCH_NAME="${GITHUB_HEAD_REF}"
+          fi
+
+          if [[ $BRANCH_NAME == deployment/* ]]; then
+            echo "⏩ Skipping commit message check for deployment branch: $BRANCH_NAME"
+            exit 0
+          fi
+
           git fetch origin
 
           BASE_BRANCH="$GITHUB_BASE_REF"
