--- a/.github/workflows/branch-commit-check.yml
+++ b/.github/workflows/branch-commit-check.yml
@@ -25,9 +25,9 @@ jobs:
             BRANCH_NAME="${GITHUB_HEAD_REF}"
           fi
 
-          # Allow deployment/ branches without PAYB- requirement
-          if [[ $BRANCH_NAME == deployment/* ]]; then
-            echo "✅ Branch name is correctly formatted (deployment): $BRANCH_NAME"
+          # Allow deployment/ and merge/deployment/ branches without PAYB- requirement
+          if [[ $BRANCH_NAME == deployment/* || $BRANCH_NAME == merge/deployment/* ]]; then
+            echo "✅ Branch name is correctly formatted (deployment or merge/deployment): $BRANCH_NAME"
           else
             PATTERN="^(feature|bugfix|merge)\/PAYB-[0-9]+(-(dev|uat|stage|master))?$"
             if [[ ! $BRANCH_NAME =~ $PATTERN ]]; then
@@ -37,6 +37,7 @@ jobs:
               echo "  - bugfix/PAYB-1234"
               echo "  - merge/PAYB-1234-dev, merge/PAYB-1234-uat, merge/PAYB-1234-stage, merge/PAYB-1234-master"
               echo "  - deployment/<any-name>"
+              echo "  - merge/deployment/<any-name>"
               exit 1
             else
               echo "✅ Branch name is correctly formatted: $BRANCH_NAME"
@@ -45,14 +46,14 @@ jobs:
 
       - name: Check Commit Messages
         run: |
-          # Skip commit message check for deployment/ branches
+          # Skip commit message check for deployment/ and merge/deployment/ branches
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
           if [[ $GITHUB_REF == refs/pull/* ]]; then
             BRANCH_NAME="${GITHUB_HEAD_REF}"
           fi
 
-          if [[ $BRANCH_NAME == deployment/* ]]; then
-            echo "⏩ Skipping commit message check for deployment branch: $BRANCH_NAME"
+          if [[ $BRANCH_NAME == deployment/* || $BRANCH_NAME == merge/deployment/* ]]; then
+            echo "⏩ Skipping commit message check for deployment or merge/deployment branch: $BRANCH_NAME"
             exit 0
           fi
 
@@ -63,25 +64,24 @@ jobs:
             BASE_BRANCH="$(git rev-parse --abbrev-ref HEAD)"
           fi
 
-          COMMITS=$(git log origin/$BASE_BRANCH..HEAD --pretty=format:"%s" --no-merges)
+          # Get only the latest commit message
+          LATEST_COMMIT_MSG=$(git log -1 --pretty=format:"%s")
 
           PATTERN="^PAYB-[0-9]+ - .+$"
           DESC_PATTERN="^PAYB-[0-9]+ - .{10,}$"
 
-          while IFS= read -r COMMIT_MSG; do
-            if [[ -z "$COMMIT_MSG" ]]; then
-              echo "⚠️ Empty commit message found."
-              continue
-            fi
+          if [[ -z "$LATEST_COMMIT_MSG" ]]; then
+            echo "⚠️ Empty commit message found."
+            exit 1
+          fi
 
-            if [[ ! $COMMIT_MSG =~ $PATTERN ]]; then
-              echo "❌ Invalid commit message: $COMMIT_MSG"
-              echo "Commit message must follow this format: 'PAYB-1234 - Description'"
-              exit 1
-            elif [[ ! $COMMIT_MSG =~ $DESC_PATTERN ]]; then
-              echo "❌ Commit message is too short. It should be at least 10 characters long after the task ID."
-              exit 1
-            else
-              echo "✅ Commit message is correctly formatted and descriptive: $COMMIT_MSG"
-            fi
-          done <<< "$COMMITS"
+          if [[ ! $LATEST_COMMIT_MSG =~ $PATTERN ]]; then
+            echo "❌ Invalid commit message: $LATEST_COMMIT_MSG"
+            echo "Commit message must follow this format: 'PAYB-1234 - Description'"
+            exit 1
+          elif [[ ! $LATEST_COMMIT_MSG =~ $DESC_PATTERN ]]; then
+            echo "❌ Commit message is too short. It should be at least 10 characters long after the task ID."
+            exit 1
+          else
+            echo "✅ Commit message is correctly formatted and descriptive: $LATEST_COMMIT_MSG"
+          fi
